[package]
name = "black_box"
version = "0.1.1"
authors = ["SyStem"]
edition = "2018"

[[bin]]
name = "black_box"
path = "src/main.rs"

[dependencies]
# Encryption, encoding
ring = "0.14.6"
data-encoding = "2.1.2"
rand = "0.6.5"

# Json serializaton/deserialization
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"

# Enum <-> string
strum_macros = "0.14.0"

# Mqtt connection
paho-mqtt = { path = "paho.mqtt.rust" }

# Database dependencies
postgres = "0.15.2"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"

# Logging
log = "0.4.6"
env_logger = "0.6.1"