[package]
name = "black_box"
version = "0.1.0"
authors = ["SyStem"]
edition = "2018"

[[bin]]
name = "black_box"
path = "src/main.rs"

[dependencies]
# Encryption, encoding
ring = "^0.16"
data-encoding = "^2.1"
rand = "^0.7"

# Json serializaton/deserialization
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

# Enum <-> string
strum_macros = "^0.17"

# Mqtt connection
paho-mqtt = "^0.6"

# Database dependencies
postgres = "^0.17"
r2d2 = "^0.8"
r2d2_postgres = "^0.16"

# Logging
log = "^0.4.8"
env_logger = "^0.7"

# Command line argument parsing
clap = "^2.33"
